--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section id="about">
       <h2>O mnie</h2>
       <img src="https://via.placeholder.com/150" alt="Moje zdjęcie">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In sollicitudin mauris dolor, vel commodo ex varius in. Integer ac tincidunt eros. Aliquam consequat iaculis libero, eu dignissim odio bibendum sed. Nam vitae nunc id massa congue dignissim nec a ante. Duis tincidunt malesuada ligula, sit amet tristique neque ultrices id.</p>
+      <p>Tworze swój kanał na youtube interesuje się sportem rowerowym,pływaniem.</p>
     </section>
     <section id="social-media">
       <h2>Moje media społecznościowe</h2>
