--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <main>
     <section id="hero">
       <h1>Witaj na mojej stronie!</h1>
-      <p>Tutaj znajdziesz wszystkie moje media społecznościowe oraz formularz do wysyłania pytań.</p>
+      <p>Tutaj znajdziesz wszystkie moje media społecznościowe oraz formularz do wy wysyłania pytań.</p>
     </section>
     <section id="about">
       <h2>O mnie</h2>
