--- a/index.html
+++ b/index.html
@@ -37,17 +37,14 @@
     </section>
     <section id="contact">
       <h2>Kontakt</h2>
-      <form action="mailto:techobikibler@gmail.com" method="post" enctype="text/plain">
-        <label for="name">Imię:</label>
-        <input type="text" id="name" name="name" required>
-        <label for="surname">Nazwisko:</label>
-        <input type="text" id="surname" name="surname" required>
+      <form action="https://formsubmit.co/techobikibler@gmail.com" method="POST">
+        <label for="email">Imię:</label>
+        <input type="text" name="name" required>
         <label for="email">E-mail:</label>
-        <input type="email" id="email" name="email" required>
-        <label for="message">Pytanie:</label>
-        <textarea id="message" name="message" required></textarea>
-        <button type="submit">Wyślij</button>
-      </form>
+        <input type="email" name="email" required>
+        <br>
+        <button type="submit">Send</button>
+   </form>
     </section>
   </main>
   <footer>
